# leetha

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: audit.yml  ci.yml  docker.yml  release.yml
docs/wiki/: Active-Probing.md  Authentication.md  CLI-Reference.md  Custom-Properties.md  Device-Authorization.md  Fingerprint-Sources.md  Getting-Started.md  Home.md  How-It-Works.md  Inventory-Sources.md  Presence-Monitoring.md  Remote-Sensors.md  Web-Dashboard.md
frontend/: package.json  vitest.config.ts
sensor/: Cargo.toml
sensor/src/: main.rs
spec/: test_broadcast_finding.py  test_cli_authorization.py  test_cli_baseline_reset.py  test_cli_device.py  test_cli_dhcp.py  test_console_capture_privilege.py  test_console_shutdown_timeout.py  test_console_sigint_instant.py  test_dhcp_server_router_evidence.py  test_logging_setup.py  test_notifications.py  test_safe_enqueue.py  test_topology_api.py  test_web_sigint_force_quit.py
spec/analysis/: test_attack_chain_feasibility.py  test_attack_surface_tiering.py  test_l2_dtp_stp.py  test_spoofing_arp_churn.py  test_spoofing_oui_and_rules.py  test_validator_laa.py  test_validator_manufacturer.py
spec/auth/: test_authorization_role_gate.py  test_middleware_requests.py  test_tokens.py
spec/capture/: test_banner_integration.py  test_banner_matchers.py  test_banner_ports.py  test_dedup.py  test_iot_scada_parsers.py  test_remote_build.py  test_remote_build_e2e.py  test_remote_ca.py  test_remote_config.py  test_remote_integration.py  test_remote_protocol.py  test_remote_server.py
spec/core/: test_pipeline.py  test_pipeline_integration.py
spec/evidence/: test_engine.py  test_fusion_weighting.py
spec/fingerprint/: test_amplifi_classification.py  test_custom_patterns.py  test_hatch_iot_classification.py  test_netgear_mikrotik_coverage.py  test_protocol_gateway_coverage.py  test_router_firewall_mesh_coverage.py
spec/inventory/: test_config_schema.py  test_credentials.py  test_dhcp_integration.py  test_importer_secret.py  test_log_filter.py  test_registry.py  test_scheduler.py
spec/patterns/: test_dhcp_subset_guard.py  test_pattern_index.py
spec/presence/: test_sweeper.py
spec/processors/: test_banner_processor.py  test_discovery_enhanced.py  test_mdns_hostname.py  test_mdns_reflection_guard.py  test_network.py
spec/rules/: test_identity_shift.py  (+3 more)
(+203 files in other folders)
