[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leetha"
version = "1.0.0"
description = "Network host identification and threat surface analysis engine"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "tjnull"}]
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.6",
    "psutil>=5.9",
    "markdown>=3.4",
    "apprise>=1.7",
    "prometheus-client>=0.20",
    "cryptography>=44.0.1",
    "asyncssh>=2.14.2",
]

[project.scripts]
leetha = "leetha.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leetha"]

[tool.hatch.build.targets.wheel.force-include]
"src/leetha/ui/web/dist" = "leetha/ui/web/dist"
"docs/wiki" = "leetha/docs/wiki"

[tool.pytest.ini_options]
testpaths = ["spec"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "F821",   # undefined-name — pre-existing across probe plugins
    "F401",   # unused-import — intentional re-exports and side-effect imports
    "F601",   # multi-value-repeated-key — vendor pattern dicts
    "F841",   # unused-variable — some intentional bindings
    "E701",   # multiple-statements-on-one-line — compact formatting style
    "E402",   # module-import-not-at-top — deferred imports for performance
    "E501",   # line-too-long — enforced by formatter, not linter
]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4", "httpx>=0.27"]
